add: unit tests for get products, replace product, and get product by category name